--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "nodemon": "^1.19.0",
     "passport": "^0.4.0",
     "passport-facebook": "^3.0.0",
+    "stripe": "^7.1.0",
     "swagger-ui-express": "^4.0.4",
     "validator": "^11.0.0",
     "yamljs": "^0.3.0"
