--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "author": "Kelvin Lukorito <kelvin.kitika@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "start": "NODE_ENV=development nodemon app.js"
+    "start": "NODE_ENV=development nodemon app.js",
+    "heroku-postbuild": "cd client && npm install && npm run build"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
@@ -27,7 +28,6 @@
     "yamljs": "^0.3.0"
   },
   "devDependencies": {
-    "babel-eslint": "^10.0.1",
     "eslint": "^5.16.0",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-plugin-import": "2.14.0",
